# fractal-wallpaper

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
