[package]
name = "fractal-wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
wide = "0.7"
bytemuck = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
